# mcp-sed-awk

./: .coverage  .gitignore  README.md  conftest.py  pyproject.toml
ai/: README.md  governance.md
docs/: README.md  TEST_RESULTS_v0.1.0.md  USER_GUIDE.md  security.md
src/: README.md
src/sed_awk_mcp/: __init__.py  __main__.py  mcp_instance.py  server.py
tests/: __init__.py  conftest.py  test_argument_parsing.py  test_path_validator.py  test_platform.py  test_validator.py
tests/integration/: __init__.py  test_server_integration.py  test_tools_integration.py
workspace/: README.md
workspace/change/: change-0009-fastmcp-singleton-instance.md
workspace/design/: README.md  design-0000-master_sed-awk-mcp.md  design-0001-component_security_audit.md  design-0001-component_security_path.md  design-0001-component_security_validator.md  design-0001-domain_security.md  design-0002-component_platform_config.md  design-0002-component_platform_executor.md  design-0002-domain_platform.md  design-0003-component_tools_awk.md  design-0003-component_tools_diff.md  design-0003-component_tools_list.md  design-0003-component_tools_sed.md  design-0003-domain_tools.md  design-0004-component_server_config.md  design-0004-component_server_error.md  design-0004-component_server_main.md  design-0004-domain_server.md
workspace/issues/: .gitkeep  issue-0001-argument-parsing.md  issue-0003-blacklist_substring.md  issue-0008-fastmcp-instance-mismatch.md  issue-0009-fastmcp-tool-registration-failure.md
workspace/prompt/: prompt-0001-argument-parsing.md  prompt-0001-security_validator.md  (+3 more)
(+66 files in other folders)
